Bug 1112499 - Set up shutdown pipe before new thread starts. r=keeler